# fex

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Extra.md  Probleme_Solutii.md  README.md  Valgrind.md  alias.sh  main.cpp  mainwindow.cpp  mainwindow.h  style.qss
controller/: CompareController.cpp  CompareController.h  FileOperationController.cpp  FileOperationController.h  SearchController.cpp  SearchController.h
html/: CMakeCXXCompilerId_8cpp.html  CenterBar_8cpp.html  CenterBar_8cpp_8o_8d.html  CenterBar_8cpp__incl.map  CenterBar_8cpp__incl.md5  CenterBar_8h.html  CenterBar_8h__dep__incl.map  CenterBar_8h__dep__incl.md5  CenterBar_8h__incl.map  CenterBar_8h__incl.md5  CenterBar_8h_source.html  CommandBar_8cpp.html  CommandBar_8cpp_8o_8d.html  CommandBar_8cpp__incl.map  CommandBar_8cpp__incl.md5  CommandBar_8h.html  CommandBar_8h__dep__incl.map  CommandBar_8h__dep__incl.md5  CommandBar_8h__incl.map  CommandBar_8h__incl.md5  CommandBar_8h_source.html  CompareController_8cpp.html  CompareController_8cpp_8o_8d.html  CompareController_8cpp__incl.map  CompareController_8cpp__incl.md5  CompareController_8h.html  CompareController_8h__dep__incl.map  CompareController_8h__dep__incl.md5  CompareController_8h__incl.map  CompareController_8h__incl.md5  CompareController_8h_source.html  CompareDialog_8cpp.html  CompareDialog_8cpp_8o_8d.html  CompareDialog_8cpp__incl.map  CompareDialog_8cpp__incl.md5  CompareDialog_8h.html  CompareDialog_8h__dep__incl.map  CompareDialog_8h__dep__incl.md5  CompareDialog_8h__incl.map  CompareDialog_8h__incl.md5  (+433 more)
resources/: style.qss  (+1 more)
(+95 files in other folders)
